[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/themes/theme_button/theme_colors_blobs/theme_color_blobs.gd" type="Script" id=1]

[node name="ThemeColorBlobs" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 72.0
margin_bottom = 640.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 72.0
margin_right = 144.0
margin_bottom = 640.0
mouse_filter = 1
size_flags_horizontal = 3
color = Color( 1, 0, 0, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 144.0
margin_right = 216.0
margin_bottom = 640.0
mouse_filter = 1
size_flags_horizontal = 3
color = Color( 1, 0, 0, 1 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 216.0
margin_right = 288.0
margin_bottom = 640.0
mouse_filter = 1
size_flags_horizontal = 3
color = Color( 1, 0, 0, 1 )

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 288.0
margin_right = 360.0
margin_bottom = 640.0
mouse_filter = 1
size_flags_horizontal = 3
color = Color( 1, 0, 0, 1 )
